finished cell forms and question layout

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -27,12 +27,13 @@ p
   
 #ratingScale
   list-style-type: none
-  margin-left: 25%
-  marign-right: 25%
-  padding: 5px
+  margin-left: 35%
+  padding: 5px  
   
-.row
+.rowLine
   border-bottom: 1px solid black
+  margin-left: 30px
+  margin-right: 10px
   
 .leftDiv, .rightDiv
   margin-top: 10px
@@ -49,11 +50,20 @@ p
   
 .questionList
   list-style-type: none
-  p, table
-    display: inline
+  li
+    margin-bottom: 30px
+    margin-right: 15px
   table
+    margin-right: 2px
     float: right
-  table td
-    height: 30px
-    width: 30px
-    border: 3px solid black
+  p
+    clear: right
+  p, table
+    display: inline-block
+  h4
+    text-align: center
+    
+.formCell
+  height: 30px
+  width: 30px
+  border: 3px solid black
