--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,14 @@ p {
 
 #ratingScale {
   list-style-type: none;
-  margin-left: 25%;
-  marign-right: 25%;
+  margin-left: 35%;
   padding: 5px;
 }
 
-.row {
+.rowLine {
   border-bottom: 1px solid black;
+  margin-left: 30px;
+  margin-right: 10px;
 }
 
 .leftDiv, .rightDiv {
@@ -58,13 +59,25 @@ p {
 .questionList {
   list-style-type: none;
 }
-.questionList p, .questionList table {
-  display: inline;
+.questionList li {
+  margin-bottom: 30px;
+  margin-right: 15px;
 }
 .questionList table {
+  margin-right: 2px;
   float: right;
 }
-.questionList table td {
+.questionList p {
+  clear: right;
+}
+.questionList p, .questionList table {
+  display: inline-block;
+}
+.questionList h4 {
+  text-align: center;
+}
+
+.formCell {
   height: 30px;
   width: 30px;
   border: 3px solid black;
