--- a/css/style.css
+++ b/css/style.css
@@ -25,27 +25,35 @@ p {
   font-size: 30px;
   border-bottom: 1px solid black;
   margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 65px;
+  margin-right: 25px;
+  margin-bottom: 55px;
   padding-bottom: 20px;
 }
 
-#ratingScale {
+#ratingScale ul {
   list-style-type: none;
-  margin-left: 35%;
-  padding: 5px;
+  margin-left: 30%;
+}
+
+.rowSameHeight {
+  overflow: hidden;
+}
+.rowSameHeight .sameHeight {
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
 }
 
 .rowLine {
   border-bottom: 1px solid black;
-  margin-left: 30px;
-  margin-right: 10px;
+  margin-top: 10px;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
-.leftDiv, .rightDiv {
+.leftDiv, .rightDiv, .centralDiv {
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 5px;
+  padding: 10px;
 }
 
 .leftDiv {
@@ -60,7 +68,8 @@ p {
   list-style-type: none;
 }
 .questionList li {
-  margin-bottom: 30px;
+  margin-left: -25px;
+  margin-bottom: 28px;
   margin-right: 15px;
 }
 .questionList table {
@@ -70,15 +79,41 @@ p {
 .questionList p {
   clear: right;
 }
-.questionList p, .questionList table {
+.questionList p, .questionList table, .questionList .formInputLine {
   display: inline-block;
 }
 .questionList h4 {
   text-align: center;
 }
 
+.smallList {
+  list-style-type: none;
+}
+.smallList p {
+  font-size: 15px;
+  margin: 0px;
+}
+.smallList li {
+  margin-bottom: 10px;
+}
+
 .formCell {
   height: 30px;
   width: 30px;
   border: 3px solid black;
+  font-style: italic;
+  font-size: 15px;
+  text-align: center;
+}
+
+.formLineTable td {
+  padding-top: 10px;
+}
+
+.formInputLine {
+  height: 25px;
+  font-size: 18px;
+  font-style: italic;
+  text-align: center;
+  border-bottom: 1px solid black;
 }
