--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ p {
 
 #AddictionSeverityIndex {
   font-weight: normal;
-  font-size: 30px;
+  font-size: 28px;
   border-bottom: 1px solid black;
   margin-left: 10px;
   margin-right: 25px;
@@ -33,6 +33,36 @@ p {
 #ratingScale ul {
   list-style-type: none;
   margin-left: 30%;
+}
+
+#severityTable {
+  margin: auto;
+}
+#severityTable td {
+  width: 12%;
+  height: 10px;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+  text-align: center;
+}
+#severityTable #topBold {
+  border-top: 5px solid black;
+}
+#severityTable #bottomBold {
+  border-bottom: 5px solid black;
+}
+#severityTable #vertical {
+  height: 150px;
+}
+#severityTable #vertical td {
+  max-width: 50px;
+  text-align: left;
+  border-bottom: 0px;
+  text-align: left;
+  vertical-align: bottom;
+}
+#severityTable #vertical td p {
+  transform: rotate(270deg);
 }
 
 .rowSameHeight {
@@ -95,6 +125,7 @@ p {
 }
 .smallList li {
   margin-bottom: 10px;
+  margin-left: 2px;
 }
 
 .formCell {
@@ -111,9 +142,16 @@ p {
 }
 
 .formInputLine {
-  height: 25px;
+  height: 30px;
   font-size: 18px;
   font-style: italic;
   text-align: center;
   border-bottom: 1px solid black;
+}
+
+.formSeverity {
+  height: 30px;
+  font-size: 18px;
+  font-style: italic;
+  text-align: center;
 }
