--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,7 +18,7 @@ p
   
 #AddictionSeverityIndex
   font-weight: normal
-  font-size: 30px
+  font-size: 28px
   border-bottom: 1px solid black
   margin-left: 10px
   margin-right: 25px
@@ -29,7 +29,29 @@ p
   ul
     list-style-type: none
     margin-left: 30%
-  
+    
+#severityTable
+  margin: auto
+  td
+    width: 12%
+    height: 10px
+    border-bottom: 1px solid black
+    border-right: 1px solid black
+    text-align: center
+  #topBold
+    border-top: 5px solid black
+  #bottomBold
+    border-bottom: 5px solid black
+  #vertical
+    height: 150px
+    td
+      max-width: 50px
+      text-align: left
+      border-bottom: 0px
+      text-align: left
+      vertical-align: bottom
+      p
+        transform: rotate(270deg)
   
 .rowSameHeight
   overflow: hidden
@@ -77,6 +99,7 @@ p
     margin: 0px
   li
     margin-bottom: 10px
+    margin-left: 2px
     
 .formCell
   height: 30px
@@ -91,8 +114,14 @@ p
     padding-top: 10px
   
 .formInputLine
-  height: 25px
+  height: 30px
   font-size: 18px
   font-style: italic
   text-align: center
   border-bottom: 1px solid black
+  
+.formSeverity
+  height: 30px
+  font-size: 18px
+  font-style: italic
+  text-align: center
